--- a/v2/package.json
+++ b/v2/package.json
@@ -40,6 +40,8 @@
     "web3": "^1.5.3"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true
