--- a/v2/package.json
+++ b/v2/package.json
@@ -6,7 +6,8 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test:unit": "mocha tests/modules/api_v2.spec.js --timeout 30000"
   },
   "engines": {
     "node": "14"
@@ -30,6 +31,7 @@
     "jwt-decode": "^3.1.2",
     "messagebird": "^3.6.4",
     "moment": "^2.29.1",
+    "mongoose": "^6.1.0",
     "prettyjson": "^1.2.1",
     "qs": "^6.10.1",
     "randomstring": "^1.2.1",
@@ -42,7 +44,10 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "firebase-functions-test": "^0.2.0"
+    "chai-http": "^4.3.0",
+    "firebase-functions-test": "^0.2.0",
+    "superagent": "^6.1.0",
+    "supertest": "^6.1.6"
   },
   "private": true
 }
