--- a/v2/package.json
+++ b/v2/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.4",
+    "mocha": "^9.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
     "firebase-functions-test": "^0.2.0",
