--- a/v2/package.json
+++ b/v2/package.json
@@ -7,10 +7,11 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "mocha tests/modules/api_v2.spec.js --timeout 30000"
+    "test": "mocha tests/modules/api_v2.spec.js --timeout 30000",
+    "prepare": "husky install"
   },
   "engines": {
-    "node": "14"
+    "node": "16"
   },
   "dependencies": {
     "@celo/contractkit": "^1.2.5",
@@ -43,12 +44,23 @@
   },
   "devDependencies": {
     "chai": "^4.3.4",
-    "mocha": "^9.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "firebase-functions-test": "^0.2.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
+    "mocha": "^9.2.0",
+    "prettier": "^2.5.1",
     "superagent": "^6.1.0",
     "supertest": "^6.1.6"
   },
-  "private": true
+  "private": true,
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
+  }
 }
