--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -16,7 +16,7 @@ body:
     attributes:
       label: Contact Details
       description: How can we get in touch with you if we need more info? What's your Telegram handle?
-      placeholder: @kotanipaysupport
+      placeholder: kotanipaysupport
     validations:
       required: false
   - type: textarea
